--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,9 @@
 plugins {
     id 'java'
+    id 'application'
+}
+application {
+    mainClass.set("Application")
 }
 
 group = 'org.example'
@@ -12,8 +16,10 @@ repositories {
 dependencies {
     testImplementation platform('org.junit:junit-bom:5.10.0')
     testImplementation 'org.junit.jupiter:junit-jupiter'
+    implementation group: 'com.googlecode.lanterna', name: 'lanterna', version: '3.1.1'
 }
 
 test {
     useJUnitPlatform()
 }
+
